# local-reflexion-agent

./: LICENSE  README.md  config.json  pyproject.toml
input/: calc_compound_interest.py  source_function_a.py  source_function_b.py
output/: case_a_results.md  case_b_results.md  optimized_documentation.md
src/reflexion/: main.py
