[project]
name = "local-reflexion-agent"
version = "0.1.0"
description = "A local self-correcting agent loop using LangGraph and Ollama"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jes Fink-Jensen", email = "jes@finkjensen.be" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.5",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.1.0",
    "pydantic>=2.13.4",
    "typing-extensions>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/reflexion",
]

[project.scripts]
reflexion = "reflexion.main:run"
